--- a/public/index.css
+++ b/public/index.css
@@ -127,7 +127,7 @@ nav img{
 .newsCard{
     min-width: 100%;
     max-width: 100%;
-    min-height:40% ;
+    min-height:auto ;
     max-height: auto;
     display:flex;
     align-items: center;
